# DustCollectorSoftware

./: .gitignore  A Sanity Check.md  Code Review as of Dec 29 2025.md  DESIGN.md  DustCollectorSystem.md  INSTALL.md  INSTALL_SIMPLE.sh  MANUAL_INSTALL.txt  README.md  SoftwareDesign-Mockup.md  checkit.py  code-review-02-06-2026.odt  dustcollector.service  git-cheatsheet.md  gitmenu.py  install-iss.sh  iss  iss-feed.service  iss-stream.sh  making-a-service.odt  mypy.ini  play.sh  reorganize_audio.sh  requirements.txt
AudioCoolness/: QUICKSTART.md  README.md  announcement_config.yaml  aqm_announcer_elevenlabs.py  generate_announcements.py  generate_tool_announcements.py  preview_announcements.py  requirements.txt  (+1 more)
Mockup/: .gitignore  .~lock.git-cheatsheet.txt#  README.md  git-cheatsheet.txt  install.sh  pyproject.toml  requirements.txt  run.sh  typecheck.sh
Mockup/.direnv/python-3.11.2/: pyvenv.cfg
Mockup/config/: config.yaml
Mockup/src/: config_loader.py  event_bus.py  events.py  main.py
Mockup/src/hardware/: ads1115.py  hw.py  i2c_bus.py  mock_hw.py  pcf_leds.py  pcf_relays.py  relays.py  uart.py
Mockup/src/tasks/: adc_watch.py  aqm_reader.py  collector_controller.py  lathe_gate_controller.py  saw_gate_controller.py
Mockup/src/util/: logging_setup.py
Mockup/system/: dustcollector.service
Mockup/tests/: smoke_test.md
Mockup/v2/: main.py
Mockup/v2/domain/: gate.py  leds.py
Mockup/v2/hardware/: leds_hw.py  pcf8574.py  relays.py
Mockup/v2/system/: __init__.py  event_bus.py
Mockup/v2/tasks/: gate_task_common.py  lathe_gate_task.py  saw_gate_task.py
(+58 files in other folders)
